# phase_2-todo

./: Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  prompt.txt
.specify/memory/: constitution.md
Vault/Inbox/: TEST_TASK_001.md  TEST_TASK_002.md
backend/: main.py
backend/src/todo/api/: main.py
backend/src/todo/core/: models.py  orchestrator.py
backend/src/todo/skills/: approval_manager.py  dashboard_updater.py  file_processor.py
backend/src/todo/ui/: console_ui.py
k8s/helm/todo-chart/: Chart.yaml  values.yaml
specs/feat/p2-foundation-api/: spec.md
specs/feat/p3-chatbot-mcp/: spec.md
specs/feat/p5-cloud-advanced/: spec.md
src/: app.js  server.js
src/controllers/: todoController.js
src/models/: todoStore.js
src/routes/: todos.js
tests/: integration.test.js
todo-api/: .nodemonrc  CLAUDE.md  Dockerfile  README.md  index.html  package-lock.json  package.json
todo-api/backend/: Dockerfile  main.py  pyproject.toml
todo-api/backend/src/todo/api/: routes.py  schemas.py
todo-api/backend/src/todo/core/: orchestrator.py
todo-api/specs/feat/p1-console-logic/: spec.md
todo-api/specs/feat/p4-local-k8s/: spec.md
todo-api/src/: app.js  server.js
todo-api/src/controllers/: todoController.js
todo-api/src/models/: todoStore.js
todo-api/src/routes/: todos.js
todo-api/tests/: integration.test.js
vault/inbox/: WELCOME_TODO.md
