[project]
name = "todo-app"
version = "1.0.0"
description = "A spec-driven, AI-generated Todo Application built for the AIDD Hackathon, demonstrating progressive complexity through 5 phases."
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "rich>=13.7.0",
    "sqlmodel>=0.0.16",
    "better-auth>=0.0.1-beta.18",
    "python-multipart>=0.0.6",
    "passlib>=1.7.4",
    "bcrypt>=4.1.2",
    "python-jose>=3.3.0",
    "cryptography>=41.0.8",
    "kafka-python>=2.0.2",
    "dapr>=0.8.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
